# tt-train

./: .clang-format  .clang-tidy  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  build_all.sh  conanfile.txt  init_repo.sh  init_tt_metal.sh
.github/workflows/: builld_and_test_all.yaml  pull_request.yaml
cmake/: conan_toolchain.cmake  dependencies.cmake  fetch_boost.cmake  fetch_cli11.cmake  fetch_msgpack.cmake  fetch_range_v3.cmake
framework/: main.cpp
scripts/: install_cmake_3_30.sh
sources/: CMakeLists.txt
sources/examples/: CMakeLists.txt
sources/examples/graph_capture/: CMakeLists.txt  backward_trace  main.cpp  visualize_graph.py
sources/examples/linear_regression/: CMakeLists.txt  main.cpp
sources/examples/mnist_mlp/: CMakeLists.txt  main.cpp  model.cpp  model.hpp  models.cpp  models.hpp  pytorch_mnist_bfloat16.py  utils.cpp  utils.hpp
sources/examples/nano_gpt/: CMakeLists.txt  chat_demo.py  eval.sh  main.cpp  models.cpp  models.hpp  runner.sh  utils.cpp  utils.hpp
sources/examples/nano_gpt/data/: shakespeare_slice.txt  tiny_shakespeare.txt
sources/examples/sample_app/: CMakeLists.txt  main.cpp
sources/examples/simple_cnn/: CMakeLists.txt  main.cpp
sources/examples/simple_mlp/: CMakeLists.txt  main.cpp
sources/sample_app/: CMakeLists.txt  main.cpp
sources/ttml/: CMakeLists.txt  ttml.cpp  ttml.hpp
sources/ttml/autograd/: auto_context.cpp  auto_context.hpp  autocast_tensor.cpp  autocast_tensor.hpp  clip_gradient_norm.cpp  clip_gradient_norm.hpp  graph.cpp  graph.hpp  graph_utils.hpp  module_base.cpp  module_base.hpp  tensor.cpp  tensor.hpp
sources/ttml/core/: compute_kernel_config.cpp  compute_kernel_config.hpp  debug.hpp  device.cpp  device.hpp  not_null.hpp  range_utils.hpp  system_utils.cpp  system_utils.hpp  template_utils.hpp  tensor_utils.cpp  tensor_utils.hpp  tt_tensor_utils.cpp  tt_tensor_utils.hpp  ttnn_all_includes.hpp  ttnn_fwd.hpp
sources/ttml/datasets/: dataloader.hpp  dataset_base.hpp  dataset_loader.hpp  dataset_subset.hpp  generators.cpp  generators.hpp  in_memory_char_dataset.cpp  in_memory_char_dataset.hpp  in_memory_dataset.hpp  utils.cpp  utils.hpp
sources/ttml/init/: cpu_initializers.cpp  cpu_initializers.hpp  tensor_initializers.cpp  tensor_initializers.hpp  ttnn_tensor_initializers.cpp
sources/ttml/modules/: dropout_module.cpp  dropout_module.hpp  embedding_module.cpp  embedding_module.hpp  gpt_block.cpp  gpt_block.hpp  layer_norm_module.cpp  layer_norm_module.hpp  linear_module.cpp  linear_module.hpp  multi_head_attention.cpp  multi_head_attention.hpp  multi_layer_perceptron.cpp  multi_layer_perceptron.hpp  single_head_attention.cpp  single_head_attention.hpp
sources/ttml/ops/: binary_ops.cpp  binary_ops.hpp  dropout_op.cpp  dropout_op.hpp  embedding_op.cpp  embedding_op.hpp  embeddings_op.cpp  embeddings_op.hpp  layernorm_op.cpp  layernorm_op.hpp  linear_op.cpp  linear_op.hpp  losses.cpp  losses.hpp  multi_head_utils.cpp  multi_head_utils.hpp  rmsnorm_op.cpp  rmsnorm_op.hpp  scaled_dot_product_attention.cpp  scaled_dot_product_attention.hpp  unary_ops.cpp  unary_ops.hpp
sources/ttml/ops/ttnn_fixed/: trivial_ttnn_ops.cpp  trivial_ttnn_ops.hpp
sources/ttml/optimizers/: adamw.cpp  adamw.hpp  ioptimizer.hpp  optimizer_base.cpp  optimizer_base.hpp  sgd.cpp  sgd.hpp
sources/ttml/serialization/: hdf5_file.cpp  hdf5_file.hpp  msgpack_file.cpp  msgpack_file.hpp  serialization.cpp  serialization.hpp
sources/ttml/tokenizers/: bpe_tokenizer.cpp  bpe_tokenizer.hpp  char_tokenizer.cpp  char_tokenizer.hpp  char_tokenizer_trainer.cpp  char_tokenizer_trainer.hpp  tokenizer_base.hpp
sources/ttml/ttnn_fixed/: trivial_ttnn_ops.cpp  trivial_ttnn_ops.hpp
sources/warp_drive/: CMakeLists.txt  warp_drive.cpp  warp_drive.hpp
tests/: CMakeLists.txt  char_tokenizer_test.cpp  dataloader_test.cpp  generators_test.cpp  hello_test.cpp
tests/autograd/: autograd_tensor.cpp  autograd_test.cpp  clip_gradient_norm_test.cpp  module_base_parameters_test.cpp
tests/core/: tensor_utils_test.cpp
tests/datasets/: dataloader_test.cpp  generators_test.cpp  in_memory_char_dataset_test.cpp  random_split_test.cpp  utils_test.cpp
tests/model/: linear_regression_full_test.cpp  model_names_test.cpp
tests/ops/: embedding_op_test.cpp  layer_norm_op_test.cpp  linear_op_test.cpp  unary_ops_test.cpp
tests/optimizers/: adamw_test.cpp
tests/serialization/: hdf5_test.cpp  msgpack_serializer_test.cpp  tensor_serializer_test.cpp
tests/tokenizers/: bpe_tokenizer_test.cpp  char_tokenizer_test.cpp  char_tokenizer_trainer.cpp  char_tokenizer_trainer_test.cpp
tests/ttnn_fixed/: trivial_ttnn_ops_test.cpp
